# IOT

./: .gitignore  40-监控日志系统详细实现.md  41-CI-CD流水线实现.md  41-配置管理中心详细实现.md  42-备份恢复系统实现.md  43-高可用集群部署实现.md  44-性能优化与调优实现.md  45-测试验证体系实现.md  46-项目总结与未来展望.md  47-智慧制造完整实现.md  48-智慧制造资源调度系统实现.md  50-智慧制造项目总结.md  51-智慧制造形式化语义模型体系.md  52-智慧制造推理引擎与层次建模实现.md  53-语义互操作验证框架实现.md  54-智慧制造形式化建模项目总结.md  CONTRIBUTING.md  Cargo.toml  IoT架构递归迭代开发实施启动指南.md  IoT架构递归迭代开发执行总结.md  IoT架构递归迭代生成计划.md  IoT项目上下文管理与切换实施计划.md  IoT项目上下文管理系统概述.md  IoT项目中断恢复与上下文切换指南.md  IoT项目质量保证体系概述.md  IoT项目递归迭代开发流程概述.md  IoT项目重构-完整目录结构.md  README.md  run_accelerator.bat  run_accelerator.sh  上下文管理文件模板.md  微服务架构形式化定义上下文.md  微服务架构迭代计划.md  知识图谱递归迭代更新计划.md  知识节点模板示例.md  试点主题评估矩阵.md
code/: lib.rs
docs/: IoT-Knowledge-Graph-Construction.md  IoT-Quality-Assurance-System.md  IoT项目Coq公理系统核心实现.md  IoT项目ZFC公理系统核心实现.md  IoT项目全面推进状态跟踪.md  IoT项目全面推进计划.md  IoT项目全面推进进展报告.md  IoT项目公理化基础系统.md  IoT项目可持续执行机制.md  IoT项目国际标准对标体系.md  IoT项目多线程加速推进完成报告.md  IoT项目多线程加速推进执行状态.md  IoT项目多线程加速推进方案.md  (+29 more)
project0/: 10-部署实施总指南.md  40-CI-CD流水线详细实现.md  40-监控日志系统详细实现.md  41-CI-CD流水线实现.md  41-配置管理中心详细实现.md  45-测试验证体系实现.md  49-智慧制造数据采集系统实现.md  50-智慧制造项目总结.md  51-智慧制造形式化语义模型体系.md  53-语义互操作验证框架实现.md  Cargo.toml  IoT中断回复计划与容错机制详细实现.md  IoT中断回复计划完整实施方案.md  IoT中断回复计划终极实施方案.md  IoT全局形式化理论体系目录.md  IoT国际标准形式化建模与证明深度研究.md  IoT形式化推理全面整合与深度论证.md  IoT形式化推理证明理论深化研究方案.md  IoT形式化推理证明理论详细扩展.md  IoT形式化推理证明研究框架总结.md  IoT形式化模型理论完整语义证明体系.md  IoT形式化理论体系完整性与一致性终极验证.md  IoT形式化理论体系终极实现与部署方案.md  IoT形式化理论体系跨域集成与未来演化终极展望.md  IoT形式化理论哲学基础与认知科学.md  IoT形式化理论国际影响力分析.md  IoT形式化理论完整证明体系终极版.md  IoT形式化理论研究总体规划路线图.md  IoT形式化理论研究总结与展望.md  IoT形式化证明与推理详细论证.md  IoT形式化语义理论完整证明体系.md  IoT形式化语义理论完整证明体系扩展.md  IoT形式化语义理论终极证明体系.md  IoT形式化验证工具链实现指南.md  IoT架构递归迭代开发执行总结.md  IoT标准场景解释与形式化证明方法.md  IoT标准数学建模与推演过程.md  IoT语义互操作平台最终验证与认证.md  IoT项目100%完成状态报告.md  IoT项目上下文管理与切换实施计划.md  (+24 more)
project0/00-项目概述/: 01-项目愿景与目标.md
project0/01-国际标准体系/01-核心互操作标准/: 01-OPC-UA-1.05-深度解析.md
project0/01-国际标准体系/02-多标准模型分析/: 01-国际标准模型范畴论分析.md  02-标准间转换同伦类型论分析.md  03-标准转换范畴论实现.md  04-标准映射算法与真实数据.md  05-NLP分析模块与标准文本处理.md  README.md
project0/01-国际标准体系/03-IoT组件体系分析/: 01-IoT组件分类与语义体系.md  02-协议组件语义映射分析.md  03-网络拓扑语义解析分析.md  04-IoT组件动态模型与自适应系统.md  04-网络拓扑语义解析分析.md  05-动态适配与空间映射实现框架.md  05-设备描述解析器与语义映射.md  06-自治控制流与自适应组合系统.md  07-AI-IoT语义交互与策略控制框架.md  08-IoT语义模型形式化验证与证明.md  09-形式化验证工具链与自动化证明.md  10-整合式IoT语义模型形式化验证.md  11-递归同构语义模型形式化验证.md  12-基于国际标准的IoT语义模型严格论证.md  13-深度归纳递归范畴论IoT语义模型推理与证明.md  14-机器人案例-深度归纳递归范畴论IoT语义推理.md  15-机器人案例-递归展开完整理论体系覆盖.md  16-IoT软件架构边界与权衡分析.md  17-IoT软件架构实现策略与技术方案.md  18-IoT软件架构实践案例与工程实现.md  19-IoT软件架构AI集成与边缘计算应用.md  20-IoT软件架构国际标准与行业实践深度分析.md  21-IoT软件架构国际标准与行业实践深度分析-续.md  README.md
project0/01-国际标准体系/03-标准互操作与演化/: 标准互操作矩阵与演化追踪.md
project0/02-语义互操作理论/: 07-形式化论证与证明体系.md
project0/02-语义互操作理论/01-语义模型基础/: 01-语义模型定义与公理体系.md  02-语义模型公理体系与形式化定义.md
project0/02-语义互操作理论/02-标准语义映射/: 01-OPC-UA语义模型深度解析.md  02-AI语义中枢架构与自演化机制.md  02-多标准语义统一理论.md  03-AI语义中枢架构与自演化机制.md  03-标准映射算法与真实数据.md  AI语义中枢架构与自演化机制.md  多标准语义统一理论.md
project0/02-语义互操作理论/03-语义推理引擎/: 01-语义推理引擎原理与架构.md  01-语义推理规则与算法.md  02-AI推理边界与动态演化验证.md  02-推理规则引擎与知识图谱查询.md  02-语义推理规则与算法.md  03-NLP分析模块与标准文本处理.md  03-语义推理引擎实现案例.md  04-语义推理引擎总结.md  04-语义推理规则与算法.md  05-NLP分析模块与标准文本处理.md  05-语义推理引擎行业应用案例.md  06-形式化论证与证明.md  06-语义推理引擎未来展望.md  07-语义推理引擎总结与建议.md  08-语义推理引擎API与接口设计.md  09-语义推理引擎SDK与开发指南.md  10-语义推理引擎测试与验证.md  11-语义推理引擎生产部署与运维.md  12-语义推理引擎全链路闭环管理.md  13-语义推理引擎行业最佳实践.md  14-语义推理引擎知识图谱与本体集成.md  15-语义推理引擎安全性与合规性.md  16-语义推理引擎持续演化与自优化.md  17-语义推理引擎全局总结.md  18-语义推理引擎术语表与参考文献.md  19-语义推理引擎知识体系可视化.md  20-语义推理引擎全链路质量评估.md  21-语义推理引擎全链路递归极限扩展.md  22-语义推理引擎全链路递归极限总结.md  23-语义推理引擎全链路递归极限质量评估.md  24-语义推理引擎全链路递归极限未来展望.md  25-语义推理引擎全链路递归极限术语表与参考文献.md  26-IoT物理世界属性与语义建模.md  27-IoT物理世界属性与语义建模行业案例.md
project0/02-语义互操作理论/04-设备语义解释/: 01-IoT设备语义分类与定义.md  02-设备自注册与健康监测机制.md  03-设备健康监测机器学习模型.md  04-设备语义冲突检测与解决.md  设备自注册与健康监测机制.md
project0/02-语义互操作理论/05-形式化验证/: 01-TLA+规范与验证.md  02-语义互操作形式化验证.md  03-区块链集成与分布式共识.md  04-TLA+规范自动生成与验证.md  05-医疗设备数据上链案例.md  06-TLA+规范与自动验证形式化论证.md  07-分布式共识与区块链溯源形式化论证.md  08-综合形式化论证总结.md  AI驱动动态语义验证与区块链溯源.md
project0/02-语义互操作理论/06-语义模型问题边界分析/: 01-语义模型完备性分析与问题边界.md  02-编程语言类型系统与语义模型集成.md  03-数据结构语义与模型系统集成.md  03-跨域语义冲突融合与GNN算法.md  04-可解释AI方法.md  04-可解释AI方法与测试验证.md  04-语义模型完备性改进方案.md  AI推理边界与动态演化可验证性.md  README.md
project0/03-设备语义解释/: 02-设备语义建模与表示.md  04-行业专项治理与国际合规对比.md  04-设备语义标准化与互操作.md  05-AI驱动的设备语义解释.md  05-行业专项测试与合规落地方案.md  06-标准贡献与行业影响力提升.md  06-设备语义标准合规性检查.md  07-全球生态合作与影响力拓展.md  07-设备语义查询接口.md  08-设备语义解释系统架构总结.md  09-API接口文档与SDK.md  10-形式化论证与证明.md  10-生产部署实施指南.md  99-术语表与参考文献.md
project0/03-设备语义解释/01-设备语义分类与定义/: 01-IoT设备语义分类体系.md  01-设备语义标准化与互操作.md  02-设备语义健康监测与维护案例.md  02-设备语义标准化与互操作案例.md  03-设备健康监测机器学习模型.md  03-设备自注册与健康监测机制.md  04-设备健康监测机器学习模型.md  04-设备语义分类与定义总结.md  05-设备语义标准化与互操作.md  06-形式化论证与证明.md
project0/03-设备语义解释/03-设备语义映射与转换/: 01-跨协议设备语义映射.md  02-设备语义映射与转换案例.md  02-语义转换引擎.md  03-语义一致性验证.md  03-语义映射验证.md  03-语义映射验证与一致性检查.md  04-形式化论证与证明.md  04-设备语义映射与转换总结.md
project0/04-实现与开发/: 00-技术实现全面展开计划.md  00-项目完整索引与状态.md  01-形式化验证具体实现方案.md  01-数学基础详细实现.md  02-标准形式化模型实现.md  02-语义网关详细架构设计.md  03-OPC-UA适配器完整实现.md  03-数学基础详细实现.md  03-验证工具链详细实现.md  04-本体管理系统实现.md  04-标准形式化模型实现.md  05-分布式共识算法实现.md  05-量子安全加密与后量子密码学实现.md  05-验证工具链详细实现.md  06-AI驱动的设备语义解释.md  06-OPC-UA适配器完整实现.md  06-语义推理引擎实现.md  06-语义映射引擎实现.md  07-oneM2M适配器完整实现.md  07-区块链溯源系统实现.md  07-安全协议详细实现.md  08-WoT适配器完整实现.md  08-协议适配器具体实现.md  08-协议适配器实现.md  08-生物启发自愈系统实现.md  08-统一数据模型实现.md  09-Matter适配器完整实现.md  09-极限鲁棒性系统实现.md  09-语义映射引擎实现.md  10-哲学批判与未来演化系统实现.md  10-设备发现与注册系统实现.md  10-设备发现注册实现.md  10-语义映射引擎实现.md  100-API与SDK自动化测试用例.md  100-项目最终交付清单.md  100-项目最终完成总结与交付清单.md  101-质量评估与持续优化机制.md  101-项目完成庆祝.md  102-智能治理平台架构与闭环机制.md  103-平台运维与安全保障机制.md  (+178 more)
project0/04-实现与开发/01-形式化验证具体实现方案/: 05-医疗设备数据上链案例.md
project0/04-实现与开发/scripts/: demo-iot-platform.bat  demo-iot-platform.sh  start-iot-platform.bat  start-iot-platform.sh
project0/05-WebAssembly实现/: Cargo.toml  README.md  asconfig.json  go.mod  package.json
project0/scripts/: restructure_project.ps1
project0/src/coq/: IoTStandardsTheory.v
(+824 files in other folders)
