[package]
name = "iot-parallel-accelerator"
version = "0.1.0"
edition = "2021"
authors = ["IoT Team"]
description = "IoT项目多线程加速推进系统"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.0"
futures = "0.3"
async-trait = "0.1"
crossbeam = "0.8"
rayon = "1.0"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "iot-parallel-accelerator"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
