[package]
name = "iot-semantic-gateway"
version = "0.1.0"
edition = "2021"
authors = ["IoT Team <iot-team@your-org.com>"]
description = "IoT Semantic Interoperability Gateway"
license = "Apache-2.0"
repository = "https://github.com/your-org/iot-semantic-gateway"
keywords = ["iot", "semantic", "interoperability", "gateway", "opcua", "onem2m", "wot", "matter"]
categories = ["network-programming", "asynchronous", "api-bindings"]

[dependencies]
# 异步运行时
tokio = { version = "1.28", features = ["full"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTTP客户端和服务器
reqwest = { version = "0.11", features = ["json", "stream"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite"] }
redis = { version = "0.23", features = ["tokio-comp"] }

# 日志和追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# 配置管理
config = "0.13"
clap = { version = "4.0", features = ["derive"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# 加密和安全
sha2 = "0.10"
hmac = "0.12"
aes = "0.8"
rand = "0.8"

# 网络和协议
bytes = "1.4"
tokio-util = { version = "0.7", features = ["codec"] }

# 并发和同步
dashmap = "5.4"
parking_lot = "0.12"
crossbeam-channel = "0.5"

# 数学计算
num-traits = "0.2"

# 正则表达式
regex = "1.0"

# URL处理
url = "2.4"

# 文件系统
tokio-fs = "0.1"

# 压缩
flate2 = "1.0"

# 缓存
moka = "0.12"

# 指标和监控
prometheus = "0.13"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# 健康检查
health = "0.5"

# 测试
testcontainers = "0.15"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
mockall = "0.11"
proptest = "1.3"

[[bench]]
name = "semantic_mapping"
harness = false

[[bench]]
name = "protocol_adaptation"
harness = false

[features]
default = ["opcua", "onem2m", "wot", "matter"]
opcua = ["opcua-client", "opcua-server"]
onem2m = ["reqwest"]
wot = ["serde_json"]
matter = ["serde_json"]
full = ["opcua", "onem2m", "wot", "matter", "postgres", "redis", "prometheus"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
debug = true 