[package]
name = "iot-semantic-gateway-wasm"
version = "0.1.0"
edition = "2021"
description = "IoT Semantic Gateway WebAssembly Module"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# WebAssembly绑定
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Document", "Element", "HtmlElement", "Node", "Text"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 异步运行时
wasm-bindgen-futures = "0.4"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# 加密和安全
sha2 = "0.10"
hmac = "0.12"

# 数学计算
num-traits = "0.2"

# 正则表达式
regex = "1.0"

# URL处理
url = "2.4"

# 缓存
moka = "0.12"

# 并发
parking_lot = "0.12"

[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = "0.5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
debug = true 